:tada: build(HAT-112) : 멀티모듈 의존관계설정

--- a/community-app-external-api/build.gradle
+++ b/community-app-external-api/build.gradle
@@ -21,6 +21,11 @@ jar {
 }
 
 dependencies {
+    implementation project(":module-core")
+
+    api project(":community-domain-service")
+    implementation project (":community-domain-rds")
+
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -28,3 +33,6 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+
