--- a/community-app-external-api/settings.gradle
+++ b/community-app-external-api/settings.gradle
@@ -1,1 +1,5 @@
 rootProject.name = 'app-community-external-api'
+
+include "community-domain-service"
+include "community-domain-rds"
+include "community-domain-redis"
