--- a/community-domain-rds/src/main/resources/application.yaml
+++ b/community-domain-rds/src/main/resources/application.yaml
@@ -1,1 +1,20 @@
 
+# 정훈
+spring:
+  config:
+    activate:
+      on-profile: "kjh"
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/hat_local_community
+    username: root
+    password: 12341234
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+---
+
