--- a/community-domain-rds/src/main/resources/application-kjh.yaml
+++ b/community-domain-rds/src/main/resources/application-kjh.yaml
@@ -3,12 +3,12 @@
 spring:
   config:
     activate:
-      on-profile: "kjh"
+      on-profile: kjh
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/hat_local_community
     username: root
     password: 12341234
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,4 +17,3 @@ spring:
         format_sql: true
         show_sql: true
 ---
-
