--- a/build.gradle
+++ b/build.gradle
@@ -154,5 +154,10 @@ project('community-app-external-api') {
 
         api project(":community-domain-service")
         implementation project(":community-domain-rds")
+
+        //JPA
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+        runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     }
 }
