--- a/community-app-external-api/build.gradle
+++ b/community-app-external-api/build.gradle
@@ -22,7 +22,10 @@ jar {
 
 dependencies {
 
-
+    //JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
