--- a/community-domain-rds/build.gradle
+++ b/community-domain-rds/build.gradle
@@ -32,11 +32,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 
-
-
-
-
-
+    //JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 }
 
