🔧 build(HAT-129): Git Submodule 추가
1. module-common 내 Git Submodule 추가
2. 각 모듈 application.yaml 수정

--- a/air-quality-app-external-api/src/main/resources/application.yaml
+++ b/air-quality-app-external-api/src/main/resources/application.yaml
@@ -1,2 +1,5 @@
-server:
-  port: 9000
+spring:
+  config:
+    import:
+      - classpath:security-env/common/application.yaml
+      - classpath:security-env/air-quality-app-external-api/application.yaml
