--- a/air-quality-app-batch/src/main/resources/application.yaml
+++ b/air-quality-app-batch/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
 spring:
   config:
-    import: config/custom-AirQualityAppBatch.yaml
+    import:
+      - classpath:security-env/common/application.yaml
+      - classpath:security-env/air-quality-app-batch/application.yaml
