--- a/community-domain-rds/src/main/resources/application.yaml
+++ b/community-domain-rds/src/main/resources/application.yaml
@@ -1,1 +1,5 @@
-
+spring:
+  config:
+    import:
+      - classpath:security-env/common/application.yaml
+      - classpath:security-env/mariadb/application.yaml
