--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,11 +35,11 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Gradle Build Action
-        uses: gradle/gradle-build-action@v2.3.3
-        with:
-          arguments: build
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.4.0
+      - name: Execute Gradle build
+        uses: ./gradlew build
       - uses: actions/upload-artifact@v3
         with:
-          name: Package
-          path: build/libs
+          name: build-reports
+          path: build/reports/
