--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.4.0
+        with:
+          arguments: build
       - name: Execute Gradle build
         uses: ./gradlew build
       - uses: actions/upload-artifact@v3
