--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,11 +37,15 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.4.0
+        env:
+          CI: true
         with:
           gradle-version: release-candidate
       - run: gradle build
+
       - name: Execute Gradle build
         uses: ./gradlew build --scan
+
       - uses: actions/upload-artifact@v3
         with:
           name: build-reports
