👷 ci: github actions gradle build script 수정

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,7 @@ jobs:
         with:
           gradle-version: release-candidate
           cache-disabled: true
+          arguments: build
       - run: gradle build
 
       - name: Execute Gradle build
