--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: Java CI
+name: Gradle Build Test
 
 on:
   push:
@@ -35,11 +35,13 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Gradle Build Action
-        uses: gradle/gradle-build-action@v2.3.3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.4.0
         with:
-          arguments: build
+          gradle-version: release-candidate
+          cache-disabled: true
+
       - uses: actions/upload-artifact@v3
         with:
-          name: Package
-          path: build/libs
+          name: build-reports
+          path: build/reports/
