🙈 refactor(HAT-135): DS_store 디렉토리 제외

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,java,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,java,gradle
 
+*.DS_Store
 security-env/
 
 ### Intellij+all ###
