--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.0
         with:
           gradle-version: release-candidate
-          cache-disabled: true
+          arguments: build
 
       - uses: actions/upload-artifact@v3
         with:
