🐛 fix: 그레이들 스크립트 수정

--- a/air-quality-app-batch/build.gradle
+++ b/air-quality-app-batch/build.gradle
@@ -12,10 +12,6 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    enabled = true
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -24,4 +20,5 @@ dependencies {
 }
 
 tasks.named('test') {
+    useJUnitPlatform()
 }
