🐛 build: gradle 빌드 스크립트 수정
1. 'test' task 추가

--- a/build.gradle
+++ b/build.gradle
@@ -176,3 +176,9 @@ tasks.named('build') {
         "copyGitSubmodulesTo${it.name.capitalize()}"
     }
 }
+
+tasks.named('test') {
+    dependsOn targetModules.collect {
+        "copyGitSubmodulesTo${it.name.capitalize()}"
+    }
+}
