--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,7 @@ jobs:
         with:
           gradle-version: release-candidate
           cache-disabled: true
+          arguments: build --scan
 
       - uses: actions/upload-artifact@v3
         with:
