--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,java,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,java,gradle
 
-security-env/
+*.DS_Store
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
