--- a/air-quality-app-batch/build.gradle
+++ b/air-quality-app-batch/build.gradle
@@ -13,15 +13,14 @@ repositories {
 }
 
 jar {
-    enabled = true
+    enabled = false
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.batch:spring-batch-test'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 tasks.named('test') {
