📦️ build: 의존성 수정

--- a/community-app-external-api/build.gradle
+++ b/community-app-external-api/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
 
+
+    //junit5
+    api 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    api 'org.junit.jupiter:junit-jupiter-engine'
+
     //Valid
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
