--- a/community-app-external-api/src/main/resources/application.yaml
+++ b/community-app-external-api/src/main/resources/application.yaml
@@ -3,3 +3,4 @@ spring:
     import:
       - classpath:security/common/application.yaml
       - classpath:security/community-app-external-api/application.yaml
+      - classpath:security/mariadb/application.yaml
