--- a/community-app-external-api/build.gradle
+++ b/community-app-external-api/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+
 
 
     //junit5
