--- a/build.gradle
+++ b/build.gradle
@@ -153,7 +153,7 @@ project('community-app-external-api') {
         implementation project(":module-core")
 
         api project(":community-domain-service")
-        api project(":community-domain-rds")
+        implementation project(":community-domain-rds")
 
 
 
