✨ feat(HAT-103): Spring Security 사용자 처리 설정

--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,8 @@ project('air-quality-app-external-api') {
 project('member-app-external-api') {
     dependencies {
         implementation project(':module-common')
+        implementation project(':member-domain-rds')
+        implementation project(':module-core')
     }
 }
 
