--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -23,6 +23,11 @@ jar {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    api 'org.springframework.data:spring-data-jpa'
+    api 'org.modelmapper:modelmapper:3.1.0'
+    api 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
