--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    api 'org.springframework.boot:spring-boot-starter-validation'
+    api 'com.google.code.gson:gson:2.9.1'
     api 'org.springframework.data:spring-data-jpa'
     api 'org.modelmapper:modelmapper:3.1.0'
     api 'org.springframework.boot:spring-boot-starter-security'
