👷 ci(HAT-151): update super linter java rules
1. 네이버 컨벤션을 기본 규칙으로 설정

--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -46,8 +46,10 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4.10.1
         env:
+          LINTER_RULES_PATH: /
+          JAVA_FILE_NAME: naver-checkstyle-rules.xml
           VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.HAT_BE_ACTIONS }}
           FILTER_REGEX_INCLUDE: .*src/.*
           FILTER_REGEX_EXCLUDE: .*test/.*
