? feat(HAT-88): 대기질 실시간 측정정보 호출

--- a/air-quality-app-batch/src/main/resources/application.yaml
+++ b/air-quality-app-batch/src/main/resources/application.yaml
@@ -3,3 +3,4 @@ spring:
     import:
       - classpath:security/common/application.yaml
       - classpath:security/air-quality-app-batch/application.yaml
+      - classpath:security/mariadb/application.yaml
