➖ build: 의존성 변경

--- a/build.gradle
+++ b/build.gradle
@@ -155,14 +155,7 @@ project('community-app-external-api') {
     dependencies {
         implementation project(':module-common')
 
-        implementation project(":module-core")
-
-        api project(":community-domain-service")
+        //implementation project(":module-core")
         implementation project(":community-domain-rds")
-
-
-
-
-
     }
 }
