--- a/community-app-external-api/build.gradle
+++ b/community-app-external-api/build.gradle
@@ -2,22 +2,23 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'application'
 }
 
 group = 'io.howstheairtoday'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+application {
+    mainClassName = 'io/howstheairtoday/AppCommunityExternalApiApplication.java'
+}
+
 repositories {
     mavenCentral()
 }
 
-bootJar {
-    enabled = false
-}
-
 jar {
-    enabled = true
+    enabled = false
 }
 
 dependencies {
@@ -25,9 +26,6 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
-
-
 
 
     //junit5
