--- a/air-quality-app-batch/build.gradle
+++ b/air-quality-app-batch/build.gradle
@@ -10,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 application {
-    mainClassName = 'io/howstheairtoday/AirQualityAppBatchApplication.java'
+    mainClassName = 'io.howstheairtoday.AirQualityAppBatchApplication'
 }
 
 repositories {
