feat(HAT-66): 미세먼지 실시간 측정정보 조회 서비스 Test

--- a/air-quality-app-external-api/src/main/resources/application.yaml
+++ b/air-quality-app-external-api/src/main/resources/application.yaml
@@ -3,3 +3,4 @@ spring:
     import:
       - classpath:security/common/application.yaml
       - classpath:security/air-quality-app-external-api/application.yaml
+      - classpath:security/mariadb/application.yaml
