--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,7 @@ project('air-quality-app-batch') {
 project('air-quality-app-external-api') {
     dependencies {
         implementation project(':module-common')
+        implementation project(':air-quality-domain-rds')
         implementation project(':module-core')
     }
 }
