--- a/build.gradle
+++ b/build.gradle
@@ -141,7 +141,7 @@ project('air-quality-app-external-api') {
     dependencies {
         implementation project(':module-common')
         implementation project(':air-quality-domain-rds')
-        implementation project(':module-core')
+//        implementation project(':module-core')
     }
 }
 
