--- a/build.gradle
+++ b/build.gradle
@@ -140,7 +140,8 @@ project('air-quality-app-batch') {
 project('air-quality-app-external-api') {
     dependencies {
         implementation project(':module-common')
-        implementation project(':module-core')
+        implementation project(':air-quality-domain-rds')
+//        implementation project(':module-core')
     }
 }
 
