--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,7 @@ project('air-quality-app-external-api') {
 
 project('member-app-external-api') {
     dependencies {
+        implementation project(':module-security')
         implementation project(':module-common')
         implementation project(':member-domain-rds')
         implementation project(':module-core')
@@ -156,8 +157,16 @@ project('member-app-external-api') {
 project('community-app-external-api') {
     dependencies {
         implementation project(':module-common')
+        implementation project(':module-security')
 
         //implementation project(":module-core")
         implementation project(":community-domain-rds")
+    }
+}
+
+project('module-security') {
+    dependencies {
+        implementation project(':member-domain-rds')
+        implementation project(":module-core")
     }
 }
