--- a/member-domain-rds/build.gradle
+++ b/member-domain-rds/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 
     // QueryDSL
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
