--- a/community-app-external-api/src/main/resources/application.yaml
+++ b/community-app-external-api/src/main/resources/application.yaml
@@ -4,3 +4,4 @@ spring:
       - classpath:security/common/application.yaml
       - classpath:security/community-app-external-api/application.yaml
       - classpath:security/mariadb/application.yaml
+      - classpath:security/module-security/application.yaml
