--- a/community-domain-rds/build.gradle
+++ b/community-domain-rds/build.gradle
@@ -33,7 +33,7 @@ jar {
 }
 
 dependencies {
-    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
