--- a/module-security/build.gradle
+++ b/module-security/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     api 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.modelmapper:modelmapper:3.1.0' // ModelMapper 라이브러리
+    api 'org.modelmapper:modelmapper:3.1.0' // ModelMapper 라이브러리
     implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
