--- a/air-quality-app-batch/build.gradle
+++ b/air-quality-app-batch/build.gradle
@@ -16,11 +16,25 @@ jar {
     enabled = false
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+
+    all {
+        // Logback과의 충돌 방지
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // LOGGING
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
     // 스프링 배치를 사용하기 위한 의존성 주입
     implementation 'org.springframework.boot:spring-boot-starter-batch'
