➕ build(HAT-213): air-quality-client 내부 모듈 추가
1. air-quality-app-batch 모듈이 사용 가능한 내부 모듈(OpenAPI 요청, 응답 스펙 정의와 예외 처리 추상화를 위함)

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "module-security/src/main/resources/security"]
 	path = module-security/src/main/resources/security
 	url = https://github.com/Hows-the-Air-Today/security.git
+[submodule "air-quality-client/src/main/resources/security"]
+	path = air-quality-client/src/main/resources/security
+	url = https://github.com/Hows-the-Air-Today/security.git
