--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,12 @@ project('module-core') {
     }
 }
 
+project('air-quality-client') {
+    dependencies {
+        implementation project(':module-common')
+    }
+}
+
 project('air-quality-domain-service') {
     dependencies {
         implementation project(':module-common')
@@ -134,6 +140,7 @@ project('air-quality-app-batch') {
         implementation project(':module-common')
         implementation project(':air-quality-domain-rds')
         implementation project(':module-core')
+        implementation project(':air-quality-client')
     }
 }
 
