♻️ refator(HAT-231): 댓글 조회 기능 리팩토링

--- a/community-domain-rds/build.gradle
+++ b/community-domain-rds/build.gradle
@@ -33,9 +33,10 @@ jar {
 }
 
 dependencies {
-    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
 
     // QueryDSL
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
