--- a/air-quality-domain-rds/build.gradle
+++ b/air-quality-domain-rds/build.gradle
@@ -34,6 +34,11 @@ jar {
 
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // DB
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
