✨ feat(HAT-177): OpenAPI 대기질 예보통보 조회  (#46)
* ✨ feat(HAT-178): HttpUrlConnection을 이용한 OpenAPI 호출

* ➕ build(HAT-213): air-quality-client 내부 모듈 추가

1. air-quality-app-batch 모듈이 사용 가능한 내부 모듈(OpenAPI 요청, 응답 스펙 정의와 예외 처리 추상화를 위함)

* 🚚 refactor(HAT-213): 애플리케이션 계층에서 내부 모듈 계층으로 이동

1. OpenAPIConfig: 환경 변수 관리 파일
2. PMForecastRequest: 대기질 예보통보 조회 요청 DTO
3. PMForecastResponse: 대기질 예보통보 조회 응답 DTO
- @ToString 어노테이션 추가

* ✨ feat(HAT-213): RestTemplate을 이용한 요청, 응답 스펙 정의

1. 대기질 예보통보 조회 스펙 정의
2. API 요청 재시도를 위한 인터셉터 정의
3. 로깅 인터셉터 정의
4. 커스텀 예외 처리 추상화

* ✨ feat(HAT-213): 대기질 예보통보 조회 서비스 클래스 생성

* ✅ test(HAT-213): 대기질 예보통보 조회 테스트

1. MockServer를 이용한 서비스 로직 테스트
2. 가짜 응답을 위한 json 파일 정의

* ⚡️ perf: 대기질 예보통보 조회 서비스 로직 변경

1. 조회날짜를 매개변수로 받아 전체 대기질을 조회하던 기존 서비스 로직에서 통보코드를 추가로 매개변수로 전달하며 미세먼지와 초미세먼지를 구분해서 조회할 수 있도록 서비스 로직 변경
2. 미세먼지와 초미세먼지를 구분해서 조회함으로써 데이터베이스(미세먼지, 초미세먼지 테이블)에 조회 결과를 저장 시 통보코드만 구분해서 서비스 로직을 호출하여 응답 결과를 가공하는 추가 작업 생략

* 🔧 build: submodule 업데이트

1. 최신 커밋 내역 동기화
2. .gitmodules에 main 브랜치 추적 설정 추가

* 🔧 build: submodule 업데이트

1. 최신 커밋 내역 동기화

--- a/air-quality-client/build.gradle
+++ b/air-quality-client/build.gradle
@@ -8,12 +8,12 @@ group = 'io.howstheairtoday'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
-repositories {
-    mavenCentral()
+bootJar {
+    enabled = false
 }
 
 jar {
-    enabled = false
+    enabled = true
 }
 
 configurations {
@@ -27,18 +27,21 @@ configurations {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    // lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.retry:spring-retry'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // LOGGING
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-
-    // 스프링 배치를 사용하기 위한 의존성 주입
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
-    testImplementation 'org.springframework.batch:spring-batch-test'
 
     // https://mvnrepository.com/artifact/org.json/json
     implementation 'org.json:json:20230227'
