➕ build(HAT-251): build gradle core 추가

--- a/build.gradle
+++ b/build.gradle
@@ -158,9 +158,9 @@ project('member-app-external-api') {
 project('community-app-external-api') {
     dependencies {
         implementation project(':module-common')
-        implementation project(':module-security')
+//        implementation project(':module-security')
 
-        //implementation project(":module-core")
+        api project(":module-core")
         implementation project(":community-domain-rds")
     }
 }
