🚑️ build: 모듈코어 업데이트  application.yaml

--- a/member-domain-rds/src/main/resources/application.yaml
+++ b/member-domain-rds/src/main/resources/application.yaml
@@ -3,3 +3,4 @@ spring:
     import:
       - classpath:security/common/application.yaml
       - classpath:security/mariadb/application.yaml
+      - classpath:security/module-core/application.yaml
