--- a/air-quality-app-batch/src/main/resources/application.yaml
+++ b/air-quality-app-batch/src/main/resources/application.yaml
@@ -4,3 +4,4 @@ spring:
       - classpath:security/common/application.yaml
       - classpath:security/air-quality-app-batch/application.yaml
       - classpath:security/mariadb/application.yaml
+      - classpath:security/module-core/application.yaml
