--- a/member-app-external-api/Dockerfile
+++ b/member-app-external-api/Dockerfile
@@ -5,9 +5,13 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 컨테이너 내부의 /app 디렉토리에 jar 파일 복사
-ARG JAR_FILE=build/libs/*.jar
+ARG JAR_FILE=member-app-external-api/build/libs/member-app-external-api-0.0.1-SNAPSHOT.jar
 ARG CONTAINER_JAR_FILE=member-app-external-api.jar
 COPY ${JAR_FILE} ${CONTAINER_JAR_FILE}
 
 # Spring Boot를 실행하기 위한 entry point 지정
 ENTRYPOINT ["java", "-jar", "/app/member-app-external-api.jar"]
+
+# 시간 설정
+ENV TZ=Asia/Seoul
+RUN apk add --no-cache tzdata
